- fix not paid z-index

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -76,6 +76,7 @@ a {
   font-weight: $bold-font-weight;
   text-align: center;
   text-transform: uppercase;
+  z-index: 900;
 
   & + .header {
     margin-top: 5.6rem;
